2004-04-27  Rodney Dawes  <dobey@ximian.com>

	* gui/contact-editor/e-contact-editor-fullname.c:
	(e_contact_editor_fullname_init):
	* gui/contact-editor/fullname.glade:
	* gui/search/e-addressbook-search-dialog.c (eab_search_dialog_init):
	Update dialog vbox and action area border widths to be HIG compliant
	Update main child widget border widths to be HIG compliant

2004-04-27  Larry Ewing  <lewing@ximian.com>

	* gui/component/addressbook-config.c (source_to_dialog_new): fix
	warnings, remove unused code.

	* gui/component/addressbook-config.c: start integrate the new
	dialog.

	* gui/component/ldap-config.glade: add the new dialog.

2004-04-26  Rodney Dawes  <dobey@ximian.com>

	* gui/contact-editor/contact-editor.glade:
	* gui/contact-editor/e-contact-editor.c (e_contact_editor_init):
	Set spacing around notebook widget and the dialog's action area and
	vbox widgets to be compliant with the HIG dialog specs

2004-04-25  Chris Toshok  <toshok@ximian.com>

	* importers/evolution-ldif-importer.c (ldif_fields): add "mobile"
	mapping to E_CONTACT_PHONE_MOBILE, which is what thunderbird uses
	(and really what we should have always been using.)

2004-04-23  Jeffrey Stedfast  <fejj@ximian.com>

	* conduit/address-conduit.c (get_next_mail): The firt EMAIL item
	is EMAIL_1, not EMAIL (assuming we want simple strings).
	(local_record_from_ecard): Use e_contact_get() for getting the
	EContactAddress. Loop from FIRST_ADDRESS_ID up to and *including*
	LAST_ADDRESS_ID.
	(ecard_from_remote_record): When searching for an address field,
	loop from FIRST_ADDRESS_ID up to and *including* LAST_ADDRESS_ID.
	(pre_sync): Use e_book_query_any_field_contains() rather than
	e_book_query_from_string ("#t") which doesn't work anyway.

2004-04-20  Jeffrey Stedfast  <fejj@ximian.com>

	* conduit/address-conduit.c (map_name): Updated to use
	~/.evolution as the evolution directory rather than ~/evolution.

2004-04-23  Dan Winship  <danw@ximian.com>
