@@ -1,3 +1,8 @@
+2004-04-27  Jeffrey Stedfast  <fejj@ximian.com>
+
+	* gui/component/addressbook-migrate.c (addressbook_migrate):
+	Migrate pilot data.
+
 2004-04-27  Rodney Dawes  <dobey@ximian.com>
 
 	* gui/contact-editor/e-contact-editor-fullname.c:
